--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ img {
 
 /* Legendas */
 .legenda {
-    font-size: 0.9em;
+    font-size: 2em;
     color: #ba1616;
     margin: 20px 0;
     text-align: center;
@@ -588,4 +588,39 @@ nav ul li a:hover {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilo para o overlay */
+#overlay {
+    display: none; /* Escondido por padrão */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Fundo escuro com transparência */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+/* Estilo para a imagem ampliada */
+#overlay img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: aparecer 0.3s ease-in-out;
+}
+
+/* Animação para a imagem */
+@keyframes aparecer {
+    from {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
